--- a/frontend/style/annotations/util.less
+++ b/frontend/style/annotations/util.less
@@ -4,8 +4,3 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-.read-only {
-    pointer-events: none;
-    opacity: 0.4;
-}
